--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "chart.js": "^3.5.1",
+    "d3": "^7.0.4",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.5",
+    "react-data-table-component": "^7.3.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "styled-components": "^5.3.1",
+    "web-vitals": "^1.1.2",
+    "xlsx": "^0.17.2"
   },
   "scripts": {
     "start": "react-scripts start",
